// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`returns JSON with all props 1`] = `
Object {
  "description": "this component spreads the base component prop types",
  "name": "ExtendedComponent",
  "properties": Array [
    Object {
      "description": "color (string)",
      "format": "string",
      "name": "color",
    },
    Object {
      "description": "fontSize (number)",
      "format": "number",
      "name": "fontSize",
    },
    Object {
      "description": "one (oneOfType)",
      "format": "string
number
new FakeComponent(...)",
      "name": "one",
    },
    Object {
      "deprecated": "do not use",
      "description": "deprecated (string)",
      "format": "string",
      "name": "deprecatedProp",
    },
    Object {
      "description": "arr (array of number)",
      "format": "[number]",
      "name": "arr",
    },
    Object {
      "deprecated": "a deprecated function",
      "description": "fun (function)",
      "format": "function",
      "name": "fun",
    },
  ],
}
`;

exports[`returns Markdown with all props 1`] = `
"## ExtendedComponent
this component spreads the base component prop types


## Properties

**color**

color (string)

\`\`\`
string
\`\`\`

**fontSize**

fontSize (number)

\`\`\`
number
\`\`\`

**one**

one (oneOfType)

\`\`\`
string
number
new FakeComponent(...)
\`\`\`

**~~deprecatedProp~~** (do not use)

deprecated (string)

\`\`\`
string
\`\`\`

**arr**

arr (array of number)

\`\`\`
[number]
\`\`\`

**~~fun~~** (a deprecated function)

fun (function)

\`\`\`
function
\`\`\`
  "
`;

exports[`returns Typescript with all props 1`] = `
Object {
  "description": "this component spreads the base component prop types",
  "name": "ExtendedComponent",
  "properties": Array [
    Object {
      "description": "color (string)",
      "format": "string",
      "name": "color",
    },
    Object {
      "description": "fontSize (number)",
      "format": "number",
      "name": "fontSize",
    },
    Object {
      "description": "one (oneOfType)",
      "format": "string | number | any",
      "name": "one",
    },
    Object {
      "deprecated": "do not use",
      "description": "deprecated (string)",
      "format": "string",
      "name": "deprecatedProp",
    },
    Object {
      "description": "arr (array of number)",
      "format": "number[]",
      "name": "arr",
    },
    Object {
      "deprecated": "a deprecated function",
      "description": "fun (function)",
      "format": "((...args: any[]) => any)",
      "name": "fun",
    },
  ],
}
`;
